<resources>
    <string name="app_name">Award App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="award">AWARD</string>
    <string name="enter_your_email_address_to_sign_in_and_continue">Enter your email address to sign in and continue</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="awards_menu">Awards Menu</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="award_poinAward">Poin</string>
    <string name="award_typeAward">Vouchers</string>
    <string name="award_nameAward">Gift Card</string>
</resources>
