<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="5">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="bottom"
                android:src="@drawable/awards_logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:weightSum="12">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/award"
                android:textSize="60sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_hideKeyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="30dp"
                android:paddingHorizontal="20dp"
                android:gravity="center"
                android:text="@string/enter_your_email_address_to_sign_in_and_continue"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/login_edtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="30dp"
                android:paddingLeft="16dp"
                android:inputType="text"
                android:hint="@string/email_address"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@drawable/border_login"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:gravity="center_horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_cardView_button"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    app:cardBackgroundColor="@color/colorBlue"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>