<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_awards_items"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/colorGrey"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/relativeLayout_card_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="end">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_typeAward_items"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    app:cardBackgroundColor="@color/colorBlueType"
                    app:cardCornerRadius="15dp">

                    <TextView
                        android:id="@+id/txtView_typeAward_items"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/award_typeAward"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/txtView_poinAward_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/award_poinAward"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtView_nameAward_items"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/award_nameAward"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack" />



</LinearLayout>